# handbook-redis

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  sensor-generator.py
